force-app/main/default/objects/Booking_Platform_Account__mdt/Booking_Platform_Account__mdt.object-meta.xml
<CustomObject>
    <label>Booking Platform Account</label>
    <pluralLabel>Booking Platform Accounts</pluralLabel>
</CustomObject>