force-app/main/default/objects/Booking_Platform_Account__mdt/fields/Platform__c.field-meta.xml
<CustomField>
    <fullName>Platform__c</fullName>
    <label>Platform</label>
    <type>Text</type>
    <length>40</length>
</CustomField>