force-app/main/default/objects/Booking_Platform_Account__mdt/fields/Public_Key__c.field-meta.xml
<CustomField>
    <fullName>Public_Key__c</fullName>
    <label>Public Key</label>
    <type>Text</type>
    <length>80</length>
</CustomField>