force-app/main/default/objects/Booking_Platform_Account__mdt/fields/Secret_Key__c.field-meta.xml
<CustomField>
    <fullName>Secret_Key__c</fullName>
    <label>Secret Key</label>
    <type>Text</type>
    <length>255</length>
</CustomField>